# picobot

./: .gitignore  CONTRIBUTING.md  LICENSE  PyWhatKit_DB.txt  README.md  SECURITY.md  __init__.py  __main__.py  pyproject.toml  setup.py
.github/workflows/: test.yml
agent/: loop.py  memory.py  subagent.py
agent/tools/: calendar.py  message.py  registry.py  shell.py  web.py
bridge/: index.js  package-lock.json  package.json  qrcode.txt
bus/: dax_service.py  events.py
channels/: base.py  dingtalk.py  manager.py  matrix.py  qq.py  web.py
config/: loader.py  schema.py
cron/: __init__.py  service.py
docs/: API.md  ARCHITECTURE.md  BRAND.md
heartbeat/: service.py
picobot/: __init__.py
picobot/agent/: __init__.py  context.py  loop.py  skills.py  subagent.py  vector_memory.py
picobot/agent/tools/: __init__.py  calendar.py  cron.py  dax.py  filesystem.py  mcp.py  registry.py  shell.py  skills.py  web.py  (+2 more)
picobot/bus/: __init__.py  analytics.py  dax_auth.py  dax_queue.py  dax_service.py  queue.py  soothsayer_service.py  webhooks.py
picobot/channels/: __init__.py  base.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  web.py  wecom.py  whatsapp.py
picobot/cli/: __init__.py  commands.py
picobot/config/: __init__.py  loader.py  paths.py  schema.py
picobot/cron/: service.py
picobot/heartbeat/: __init__.py
picobot/providers/: __init__.py  azure_openai_provider.py  base.py  fallback_provider.py  gemini_oauth_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py
picobot/session/: __init__.py  manager.py
picobot/skills/: README.md
picobot/templates/: AGENTS.md
picobot/utils/: __init__.py  helpers.py
picobot/web/: index.html  manifest.json
providers/: __init__.py  azure_openai_provider.py  base.py  custom_provider.py  litellm_provider.py
skills/cron/: SKILL.md
skills/github/: SKILL.md
skills/skill-creator/: SKILL.md
skills/task/: SKILL.md
skills/tmux/: SKILL.md
skills/whatsapp/: SKILL.md
templates/: HEARTBEAT.md  SOUL.md  USER.md
templates/memory/: MEMORY.md
tests/: test_provider_fallback.py  test_telegram.py  test_whatsapp.py
web/: index.html
(+11 files in other folders)
